--- a/api/package.json
+++ b/api/package.json
@@ -12,8 +12,6 @@
     "glue": "^5.0.0",
     "good": "^8.1.1",
     "good-console": "^7.1.0",
-    "good-file": "^6.0.1",
-    "good-http": "^6.1.3",
     "good-squeeze": "^5.1.0",
     "graphql": "^0.13.2",
     "graphql-server-hapi": "^1.3.6",
@@ -27,13 +25,7 @@
     "test": "jest --watch",
     "lint": "./node_modules/.bin/eslint eslint '**/*.js' --fix"
   },
-  "keywords": [
-    "graphql",
-    "hapi",
-    "api",
-    "server",
-    "node"
-  ],
+  "keywords": ["graphql", "hapi", "api", "server", "node"],
   "author": "Andrew Naeve",
   "license": "ISC"
 }
