--- a/example.env
+++ b/example.env
@@ -1,3 +1,5 @@
-POSTGRES_PASSWORD=examplepassword
-POSTGRES_USER=exampleuser
 POSTGRES_DB=exampledb
+POSTGRES_USER=exampleuser
+POSTGRES_PASSWORD=examplepassword
+POSTGRES_PORT=5432
+POSTGRES_HOST=postgres
