--- a/api/package.json
+++ b/api/package.json
@@ -4,26 +4,28 @@
   "description": "Multi-threaded GraphQL Hapi Server",
   "main": "server.js",
   "dependencies": {
-    "apollo-server": "^0.3.3",
     "apollo-server-hapi": "^1.3.6",
     "bcrypt": "^2.0.1",
     "boom": "^7.2.0",
+    "confidence": "^3.0.2",
     "dotenv": "^5.0.1",
     "glue": "^5.0.0",
     "good": "^8.1.1",
     "good-console": "^7.1.0",
     "good-squeeze": "^5.1.0",
     "graphql": "^0.13.2",
-    "graphql-server-hapi": "^1.3.6",
     "hapi": "^17.4.0",
     "joi": "^13.3.0",
+    "knex": "^0.14.6",
+    "objection": "^1.1.8",
+    "pg": "^7.4.3",
     "wreck": "^14.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.17.4"
   },
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "npm i && knex migrate:latest && knex seed:run && nodemon server.js",
     "test": "jest --watch",
     "lint": "./node_modules/.bin/eslint eslint '**/*.js' --fix"
   },
