--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -6,13 +6,13 @@ ENV PATH /usr/src/frontend/node_modules/.bin:$PATH
 COPY ./frontend/package.json /usr/src/frontend/package.json
 RUN npm install --silent
 RUN npm install react-scripts -g --silent
-COPY . /usr/src/frontend
+COPY ./frontend /usr/src/frontend
 RUN npm run build
 
 # production environment
 FROM nginx:latest
 RUN rm -rf /etc/nginx/conf.d
-COPY conf /etc/nginx
+COPY default.conf /etc/nginx
 COPY --from=builder /usr/src/frontend/build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
