--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,21 +1,22 @@
 version: '3.5'
 
 services:
-  frontend-prod:
-    container_name: frontend-prod
+  frontend:
+    container_name: frontend
     build:
       context: .
       dockerfile: Dockerfile.prod
     environment:
-      NODE_PATH: /usr/src/frontend/src
-      REACT_APP_ENV: production
-      HTTPS: "true"
+      - NODE_PATH=/usr/src/frontend/src
+      - REACT_APP_ENV=production
+      - HTTPS=true
     env_file:
       - ./common.env
     depends_on:
-      - api-prod
+      - api
   
-  api-prod:
+  api:
+    container_name: api
     build:
       context: .
       dockerfile: Dockerfile.node
@@ -26,6 +27,8 @@ services:
       - 8000
     ports:
       - 8000:8000
+    environment:
+      - NODE_ENV=production
     env_file:
       - ./common.env
     volumes:
