--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "hapitrail",
+  "name": "seedlings",
   "version": "0.0.1",
   "description": "Multi-threaded GraphQL Hapi Server",
   "main": "server.js",
   "dependencies": {
     "apollo-server-hapi": "^1.3.6",
     "bcrypt": "^2.0.1",
-    "boom": "^7.2.0",
     "confidence": "^3.0.2",
     "dotenv": "^5.0.1",
     "glue": "^5.0.0",
@@ -29,13 +28,11 @@
     "test": "jest --watch",
     "lint": "./node_modules/.bin/eslint eslint '**/*.js' --fix"
   },
-  "keywords": [
-    "graphql",
-    "hapi",
-    "api",
-    "server",
-    "node"
-  ],
+  "keywords": ["graphql", "hapi", "api", "server", "node"],
   "author": "Andrew Naeve",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/andrewnaeve/Seedlings.git"
+  }
 }
