--- a/api/package.json
+++ b/api/package.json
@@ -4,21 +4,20 @@
   "description": "Multi-threaded GraphQL Hapi Server",
   "main": "server.js",
   "dependencies": {
-    "apollo-server-hapi": "^1.3.6",
+    "apollo-server": "^2.0.0-beta.2",
     "bcrypt": "^2.0.1",
-    "boom": "^7.2.0",
     "confidence": "^3.0.2",
-    "dotenv": "^5.0.1",
-    "glue": "^5.0.0",
-    "good": "^8.1.1",
-    "good-console": "^7.1.0",
-    "good-squeeze": "^5.1.0",
     "graphql": "^0.13.2",
-    "hapi": "^17.4.0",
+    "graphql-middleware": "^1.2.5",
+    "graphql-shield": "^2.0.6",
+    "graphql-tools": "^3.0.2",
     "joi": "^13.3.0",
     "knex": "^0.14.6",
+    "lodash.merge": "^4.6.1",
     "objection": "^1.1.8",
+    "objection-guid": "^3.0.1",
     "pg": "^7.4.3",
+    "stripe": "^6.0.0",
     "wreck": "^14.0.2"
   },
   "devDependencies": {
