--- a/api/package.json
+++ b/api/package.json
@@ -4,25 +4,25 @@
   "description": "Multi-threaded GraphQL Hapi Server",
   "main": "server.js",
   "dependencies": {
-    "apollo-server": "^2.0.0-rc.5",
-    "bcrypt": "^3.0.0",
-    "confidence": "^3.0.2",
-    "esm": "^3.0.64",
-    "graphql": "^0.13.2",
-    "graphql-middleware": "^1.3.3",
-    "graphql-shield": "^2.2.5",
-    "graphql-tools": "^3.0.5",
-    "joi": "^13.4.0",
-    "knex": "^0.15.0",
+    "apollo-server": "^2.3.1",
+    "bcrypt": "^3.0.3",
+    "confidence": "^4.0.1",
+    "esm": "3.0.84",
+    "graphql": "14.0.2",
+    "graphql-middleware": "^3.0.0",
+    "graphql-shield": "^5.1.0",
+    "graphql-tools": "^4.0.3",
+    "joi": "^14.3.1",
+    "knex": "^0.16.3",
     "lodash.merge": "^4.6.1",
-    "objection": "^1.1.10",
-    "objection-guid": "^3.0.1",
-    "pg": "^7.4.3",
-    "stripe": "^6.2.1",
-    "wreck": "^14.0.2"
+    "objection": "^1.4.0",
+    "objection-guid": "^3.0.2",
+    "pg": "^7.7.1",
+    "stripe": "^6.20.0",
+    "wreck": "^14.1.3"
   },
   "devDependencies": {
-    "nodemon": "^1.17.4"
+    "nodemon": "^1.18.9"
   },
   "scripts": {
     "start": "npm i && knex migrate:latest && knex seed:run && nodemon index.js",
