upgrade packages and only mount relevant packages in container

--- a/Dockerfile.node
+++ b/Dockerfile.node
@@ -1,15 +1,15 @@
-FROM node:8.11.2
+FROM node:10.15.0
 
 ARG PACKAGE_PATH=
-ARG WORKING_DIR=/src
+ARG WORKING_DIR=
 
-WORKDIR $WORKING_DIR
+WORKDIR ${WORKING_DIR}
 
-COPY $PACKAGE_PATH/package.json $WORKING_DIR/package.json
-COPY $PACKAGE_PATH/package-lock.json $WORKING_DIR/package-lock.json
+COPY ${PACKAGE_PATH}/package*.json ${WORKING_DIR}
+
 RUN npm install
 
-COPY . /src
+COPY ${PACKAGE_PATH} ${WORKING_DIR}
 
 VOLUME $WORKING_DIR/node_modules
 
